k8s-declarations/color-service.yml
# kubectl create -f color-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    color: green
  ports:
  - name: http
    port: 80  # From inside my k8s cluster this service will be reachable via green-service.default.svc.cluster.local:80
    targetPort: 8080 # This is where the pod listens to
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: white-service
spec:
  selector:
    color: white
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: red-service
spec:
  selector:
    color: red
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: black-service
spec:
  selector:
    color: black
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    color: blue
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: yellow-service
spec:
  selector:
    color: yellow
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
