k8s-declarations/color-ingress.yaml
# kubectl apply -f color-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: color
spec:
  rules:
  - host: green.diginfra.net
    http:
      paths:
      - path: /
        backend:
          serviceName: green-service
          servicePort: http
  - host: white.diginfra.net
    http:
      paths:
      - path: /
        backend:
          serviceName: white-service
          servicePort: http
  - host: red.diginfra.net
    http:
      paths:
      - path: /
        backend:
          serviceName: red-service
          servicePort: http
  - host: blue.diginfra.net
    http:
      paths:
      - path: /
        backend:
          serviceName: blue-service
          servicePort: http
  - host: black.diginfra.net
    http:
      paths:
      - path: /
        backend:
          serviceName: black-service
          servicePort: http
  - host: color.diginfra.net
    http:
      paths:
      - path: /green
        backend:
          serviceName: green-service
          servicePort: http
      - path: /red
        backend:
          serviceName: red-service
          servicePort: http
      - path: /white
        backend:
          serviceName: white-service
          servicePort: http
      - path: /blue
        backend:
          serviceName: blue-service
          servicePort: http
      - path: /yellow
        backend:
          serviceName: yellow-service
          servicePort: http
      - path: /black
        backend:
          serviceName: black-service
          servicePort: http
